[package]
name = "privdrop"
version = "0.2.2"
description = "A simple crate to drop privileges"
authors = ["Frank Denis <github@pureftpd.org>"]
keywords = ["privileges", "drop"]
license = "ISC"
homepage = "https://github.com/jedisct1/rust-privdrop"
repository = "https://github.com/jedisct1/rust-privdrop"
categories = ["os::unix-apis"]
edition = "2018"

[badges]
travis-ci = { repository = "jedisct1/rust-privdrop" }

[dependencies]
libc = "0.2"
nix = "0.13"

