[package]
name = "privdrop"
version = "0.5.5"
description = "A simple crate to drop privileges"
authors = ["Frank Denis <github@pureftpd.org>"]
keywords = ["privileges", "drop"]
license = "ISC"
homepage = "https://github.com/jedisct1/rust-privdrop"
repository = "https://github.com/jedisct1/rust-privdrop"
categories = ["os::unix-apis"]
edition = "2018"

[dependencies]
libc = "0.2"
nix = { version = "0.30", features = ["user", "fs"] }
